# HGG-verba-update

./: .gitignore  Dockerfile  FRONTEND.md  MIGRATION-ASTRAL-STACK.md  Makefile  README.md  ai_concepts.md  connect_to_main_ui.js  docker-compose.yml  main.py  memories.json  mock_api_server.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  python_guide.md  setup.py  simple_style_test.js  start-local.sh  take_screenshot.js  take_ui_screenshot.js  test_document.md  test_ui_styling.js  verify_ui_match.js
.claude-flow/metrics/: performance.json  task-metrics.json
.github/workflows/: quality.yml
.qlty/: qlty.toml
.swarm/: memory.db
docs/: MIGRATION.md  PRD.md  react-effect.md
frontend/: .eslintrc.json  biome.json  components.json  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tdd-london-school-threejs-strategy.md  tsconfig.json  tsconfig.production.json  vitest.config.ts  vitest.setup.ts
frontend/.claude-flow/metrics/: performance.json  task-metrics.json
frontend/.swarm/: memory.db
frontend/app/: api.ts  globals.css  layout.tsx  page.tsx  providers.tsx  types.ts  util.ts
frontend/app/api/client-logs/: route.ts
frontend/app/components/Chat/: ChatConfig.tsx  ChatInterface.tsx  ChatMessage.tsx  ChatView.tsx  OptimizedChatConfig.tsx  StatusLabel.tsx
frontend/app/components/Document/: ChunkView.tsx  ContentView.tsx  DocumentExplorer.tsx  DocumentMetaView.tsx  DocumentSearch.tsx  DocumentView.tsx  DynamicVectorView.tsx  TDD-Implementation-Guide.md  VectorView.tsx  VectorViewDeck.tsx  VectorViewDeck.tsx.backup  util.ts
frontend/app/components/Document/__tests__/: DynamicVectorView.london-school.test.tsx  VectorView.behavior-specs.test.tsx  VectorView.london-school.test.tsx  VectorView.swarm-coordination.test.tsx
frontend/app/components/Document/contracts/: ThreeJSContracts.ts
frontend/app/components/Ingestion/: BasicSettingView.tsx  ComponentView.tsx  ConfigurationView.tsx  FileComponent.tsx  FileSelectionView.tsx  IngestionView.tsx
frontend/app/components/Login/: GettingStarted.tsx  LoginView.tsx  ThreeLoginScene.tsx
frontend/app/components/Navigation/: InfoComponent.tsx  NavButton.tsx  NavbarComponent.tsx  StatusMessenger.tsx  UserModal.tsx  VerbaButton.tsx  util.ts
frontend/app/components/Settings/: InfoView.tsx  SettingsComponent.tsx  SettingsView.tsx  SuggestionView.tsx
frontend/app/components/ui/: accordion.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input-with-icon.tsx  input.tsx  label.tsx  radio-group.tsx  range.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  skeleton.tsx  slider.tsx  spinner.tsx  switch.tsx  textarea.tsx  tooltip.tsx
frontend/app/hooks/: api-hooks.ts
frontend/app/lib/: api-client.ts  langsmith.ts  queries.ts
frontend/app/providers/: query-provider.tsx
frontend/components/ai-elements/: actions.tsx  conversation.tsx  reasoning.tsx
frontend/components/ui/: button.tsx  tooltip.tsx
frontend/docs/: react-effect.md
frontend/public/: weaviate.glb
frontend/tests/e2e/: ui.spec.ts
frontend/testsprite_tests/tmp/: config.json
frontend/types/: deckgl-core.d.ts  deckgl-layers.d.ts  deckgl-react.d.ts  shims.d.ts
goldenverba/: verba_manager.py
goldenverba/components/: chunk.py  circuit_breaker.py  config.py  document.py  exceptions.py  health.py  http_client.py  interfaces.py  managers.py  metrics.py  retry.py  types.py  util.py
goldenverba/components/chunking/: CodeChunker.py  HTMLChunker.py  JSONChunker.py  MarkdownChunker.py  RecursiveChunker.py  SemanticChunker.py  SentenceChunker.py  TokenChunker.py
goldenverba/components/embedding/: CohereEmbedder.py  GoogleEmbedder.py  OllamaEmbedder.py  OpenAIEmbedder.py  SentenceTransformersEmbedder.py  UpstageEmbedder.py  VoyageAIEmbedder.py  WeaviateEmbedder.py
goldenverba/components/generation/: AnthrophicGenerator.py  CohereGenerator.py  GeminiGenerator.py  GroqGenerator.py  LiteLLMGenerator.py  NovitaGenerator.py  OllamaGenerator.py  OpenAIGenerator.py  UpstageGenerator.py
goldenverba/components/reader/: AssemblyAIAPI.py  BasicReader.py  FirecrawlReader.py  GitReader.py  HTMLReader.py  UnstructuredAPI.py  UpstageDocumentParse.py
goldenverba/components/retriever/: WindowRetriever.py
goldenverba/server/: api.py  cli.py  helpers.py  types.py
goldenverba/tests/: __init__.py
goldenverba/tests/components/: test_circuit_breaker.py  test_enhanced_weaviate_manager.py  test_health_checks.py  test_metrics_collection.py  test_retry_logic.py  test_weaviate_config.py  test_weaviate_exceptions.py
goldenverba/tests/document/: __init__.py  test_document.py  test_document_basic.py
goldenverba/tests/embedding/: __init__.py  test_async_integration.py  test_openai_embedder_async.py
scripts/: dev-start.sh
testsprite_tests/tmp/: code_summary.json
testsprite_tests/tmp/prd_files/: PRD.md
